syntax = "proto3";
package services.dataAccess.proto;

option java_package = "services.dataAccess.proto";
option java_outer_classname = "PostProto";

message Post {
    string id = 1;
    int64 timestamp = 2;

    repeated string source = 3;
    repeated string source_link = 4;

    int32 popularity_score = 5;
    int32 popularity_velocity = 6;

    int32 num_comments = 7;
    int32 num_shares = 8;
    int32 num_likes = 9;
    repeated string hashtag = 10;

    repeated string text = 11;
    repeated string img_link = 12;
    repeated string ext_link = 13;
}